Incorporate Alex Buckley's feedback